# AI-Analytics-Assistant

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  test_analytics.py  test_insights.py  test_loader.py  test_products.py  test_report.py
app/: dashboard.py
notebooks/: data_exploration.ipynb
src/Analytics/: ai_assistant.py  alerts.py  chatbot.py  customer_analysis.py  data_loader.py  database.py  explanations.py  forecasting.py  insights.py  kpis.py  pdf_generator.py  product_analysis.py  report_generator.py  sales_analysis.py  trends.py
src/db/: create_tables.sql  load_data.py
src/sql/: business_kpis.sql
