[project]
name = "ai-analytics-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "psycopg2-binary>=2.9.12",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "xlrd>=2.0.2",
]
